Add ClockworkPi uConsole CM4 configs and kernel patch (978f3c043).

--- a/src/kernel-aarch64-rt-debug-fedora.config
+++ b/src/kernel-aarch64-rt-debug-fedora.config
@@ -10400,3 +10400,7 @@ CONFIG_ZYNQMP_FIRMWARE=y
 CONFIG_ZYNQMP_IPI_MBOX=y
 CONFIG_ZYNQMP_PM_DOMAINS=y
 CONFIG_ZYNQMP_POWER=y
+# CONFIG_DRM_PANEL_CWD686 is not set
+# CONFIG_DRM_PANEL_CWU50 is not set
+# CONFIG_DRM_PANEL_CWU50_CM3 is not set
+# CONFIG_BACKLIGHT_OCP8178 is not set
