--- a/src/kernel-riscv64-rt-fedora.config
+++ b/src/kernel-riscv64-rt-fedora.config
@@ -8650,3 +8650,7 @@ CONFIG_ZSWAP=y
 # CONFIG_ZSWAP_ZPOOL_DEFAULT_Z3FOLD is not set
 CONFIG_ZSWAP_ZPOOL_DEFAULT_ZBUD=y
 # CONFIG_ZSWAP_ZPOOL_DEFAULT_ZSMALLOC is not set
+# CONFIG_DRM_PANEL_CWD686 is not set
+# CONFIG_DRM_PANEL_CWU50 is not set
+# CONFIG_DRM_PANEL_CWU50_CM3 is not set
+# CONFIG_BACKLIGHT_OCP8178 is not set
